The Annotated Transformer 代码研究

--- a/DeepLearning-Actions/01-pytorch-tutorial.ipynb
+++ b/DeepLearning-Actions/01-pytorch-tutorial.ipynb
@@ -10,8 +10,8 @@
      "output_type": "stream",
      "text": [
       "package版本信息：\n",
-      "numpy:       1.23.3\n",
-      "pandas:      1.4.4\n",
+      "numpy:       1.24.3\n",
+      "pandas:      1.5.3\n",
       "PyTorch:      1.12.0\n"
      ]
     }
@@ -616,16 +616,6 @@
    ],
    "source": [
     "y"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "神经网络的输入中，特别是RNN模型，常常需要对输入的数据的不同维度进行交换，主要是Batch size 这个维度。  \n",
-    "有两种方式可以处理：\n",
-    "1. `torch.transpose()`\n",
-    "2. `numpy.transpose()`"
    ]
   },
   {
@@ -1285,6 +1275,533 @@
    ],
    "source": [
     "xAy.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Shape变换\n",
+    "\n",
+    "实际中，进场要对 Tensor 进行形状的变换，主要分为下面几种情况。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 转置\n",
+    "\n",
+    "+ `torch.transpose(input, dim0, dim1) → Tensor`或者 `Tensor.transpose(dim0, dim1) → Tensor`，可以用于高维Tensor\n",
+    "+ `torch.t(input) → Tensor`，只能用于 2-维Tensor\n",
+    "+ `torch.permute(input, dims) → Tensor` 或者 `Tensor.permute(*dims) → Tensor`：`dims`指定维度的顺序，可以一次操作多个维度"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-1.9836,  0.2284,  0.4290],\n",
+       "        [-0.8110, -0.8046,  1.2182]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = torch.randn(2, 3)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-1.9836, -0.8110],\n",
+       "        [ 0.2284, -0.8046],\n",
+       "        [ 0.4290,  1.2182]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.transpose(0, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-1.9836, -0.8110],\n",
+       "        [ 0.2284, -0.8046],\n",
+       "        [ 0.4290,  1.2182]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.t()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ `permute()` 的使用"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2, 3, 5])\n",
+      "tensor([[[ 0.6431, -0.7303, -0.6878,  0.7969,  1.5894],\n",
+      "         [-0.5426,  0.4642, -0.9287,  0.5008,  1.4904],\n",
+      "         [-1.0609, -1.2842,  0.1891,  0.1698, -0.8209]],\n",
+      "\n",
+      "        [[-0.0412, -1.1263, -0.0062, -1.3322,  0.4358],\n",
+      "         [-0.8795, -0.6011, -0.1563,  0.4116,  0.1842],\n",
+      "         [-1.2135,  0.9436,  0.5826,  0.2872, -0.2922]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = torch.randn(2, 3, 5)\n",
+    "print(x.size())\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([5, 2, 3])\n",
+      "tensor([[[ 0.6431, -0.5426, -1.0609],\n",
+      "         [-0.0412, -0.8795, -1.2135]],\n",
+      "\n",
+      "        [[-0.7303,  0.4642, -1.2842],\n",
+      "         [-1.1263, -0.6011,  0.9436]],\n",
+      "\n",
+      "        [[-0.6878, -0.9287,  0.1891],\n",
+      "         [-0.0062, -0.1563,  0.5826]],\n",
+      "\n",
+      "        [[ 0.7969,  0.5008,  0.1698],\n",
+      "         [-1.3322,  0.4116,  0.2872]],\n",
+      "\n",
+      "        [[ 1.5894,  1.4904, -0.8209],\n",
+      "         [ 0.4358,  0.1842, -0.2922]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "x_p = x.permute((2, 0, 1))\n",
+    "print(x_p.size())\n",
+    "print(x_p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 视图\n",
+    "\n",
+    "参考资料：\n",
+    "+ [Pytorch-API: torch.tensor.view](https://pytorch.org/docs/stable/generated/torch.Tensor.view.html)\n",
+    "+ [StackOverflow: What does .view() do in PyTorch?](https://stackoverflow.com/questions/42479902/what-does-view-do-in-pytorch)\n",
+    "\n",
+    "`Tensor.view(*shape) → Tensor`，可以对Tensor中的数据shape进行自由组合，但是要注意，返回的是视图。\n",
+    "\n",
+    "参考下图\n",
+    "\n",
+    "<img src=\"images/torch-tensor-view.png\" width=\"50%\" align=\"center\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### 降维/升维\n",
+    "\n",
+    "参考文档：\n",
+    "+ [torch.squeeze](https://pytorch.org/docs/stable/generated/torch.squeeze.html#torch-squeeze)\n",
+    "+ [torch.unsqueeze](https://pytorch.org/docs/stable/generated/torch.unsqueeze.html#torch-unsqueeze)\n",
+    "+ [StackOverflow: What does \"unsqueeze\" do in Pytorch?](https://stackoverflow.com/questions/57237352/what-does-unsqueeze-do-in-pytorch)\n",
+    "\n",
+    "常使用的有如下两个方法：\n",
+    "+ `torch.squeeze(input, dim=None) → Tensor` 或者 `Tensor.squeeze(dim=None) → Tensor`   \n",
+    "移除tensor中某个 size=1 的维度\n",
+    "+ `torch.unsqueeze(input, dim) → Tensor` 或者 `Tensor.unsqueeze(dim) → Tensor`   \n",
+    "在指定维度后面增加一个 size=1 的维度\n",
+    "\n",
+    "示例图如下：  \n",
+    "\n",
+    "<img src=\"images/torch-tensor-squeeze.png\" width=\"60%\" align=\"center\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2, 1, 2])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[1., 1.]],\n",
+       "\n",
+       "        [[1., 1.]]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t1 = torch.ones(2, 1, 2)\n",
+    "print(t1.size())\n",
+    "t1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2, 2])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 1.],\n",
+       "        [1., 1.]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t1_squeeze = t1.squeeze()\n",
+    "print(t1_squeeze.size())\n",
+    "t1_squeeze"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 1., 1.],\n",
+       "        [1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t2 = torch.ones(2,3)\n",
+    "t2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 2, 3])\n",
+      "tensor([[[1., 1., 1.],\n",
+      "         [1., 1., 1.]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "t2_1 = t2.unsqueeze(0)\n",
+    "print(t2_1.size())\n",
+    "print(t2_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2, 1, 3])\n",
+      "tensor([[[1., 1., 1.]],\n",
+      "\n",
+      "        [[1., 1., 1.]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "t2_2 = t2.unsqueeze(1)\n",
+    "print(t2_2.size())\n",
+    "print(t2_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2, 3, 1])\n",
+      "tensor([[[1.],\n",
+      "         [1.],\n",
+      "         [1.]],\n",
+      "\n",
+      "        [[1.],\n",
+      "         [1.],\n",
+      "         [1.]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "t2_2 = t2.unsqueeze(2)\n",
+    "print(t2_2.size())\n",
+    "print(t2_2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 其他常用操作"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 掩码操作\n",
+    "\n",
+    "+ `Tensor.masked_fill_(mask, value)`：就地替换\n",
+    "+ `Tensor.masked_fill(mask, value) → Tensor`：返回一个新的 Tensor\n",
+    "\n",
+    "`mask`是一个 boolean Tensor，`True`对应要替换的位置，它的size必须要和原始Tensor相同或者两者是可广播的。\n",
+    "\n",
+    "`value` 是要替换的值。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-0.9198, -1.3369],\n",
+      "        [-1.7163, -0.2012],\n",
+      "        [ 0.5137, -0.6900]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = torch.randn(3, 2)\n",
+    "print(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1, 1],\n",
+       "        [1, 1],\n",
+       "        [1, 0]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mask =  torch.randint(0, 2, (3,2))\n",
+    "mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[False, False],\n",
+       "        [False, False],\n",
+       "        [False,  True]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mask == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ -0.9198,  -1.3369],\n",
+       "        [ -1.7163,  -0.2012],\n",
+       "        [  0.5137, 100.0000]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t.masked_fill(mask == 0, 100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ mask 是可广播的情况"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1],\n",
+       "        [1],\n",
+       "        [0]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m = torch.randint(0, 2, (3, 1))\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[False],\n",
+       "        [False],\n",
+       "        [ True]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ -0.9198,  -1.3369],\n",
+       "        [ -1.7163,  -0.2012],\n",
+       "        [111.0000, 111.0000]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t.masked_fill(m == 0, 111)"
    ]
   },
   {
@@ -2661,10 +3178,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 全连接层\n",
+    "### 全连接层-KEY\n",
     "\n",
     "`nn.Linear(in_features: int, out_features: int, bias: bool = True)` .  \n",
-    "计算的是 $y=XW^T+b$，其中 $X$ 的维度是 `batch_size * in_features`, $W$ 的维度是 `out_features * in_features`.\n",
+    "\n",
+    "对应的计算公式为：\n",
+    "$$y=XW^T+b$$\n",
+    "\n",
+    "其中 $X$ 的维度是 `batch_size * in_features`, $W$ 的维度是 `out_features * in_features`.\n",
     "\n",
     "+ 初始化参数：\n",
     "  + `in_features`：**int**，输入数据的维度\n",
@@ -7205,7 +7726,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.18"
   },
   "toc-autonumbering": true
  },
