transformer-decoder复习+HF-Bert模型相关接口复习

--- a/DeepLearning-Actions/07-huggingface-tools.ipynb
+++ b/DeepLearning-Actions/07-huggingface-tools.ipynb
@@ -3617,18 +3617,20 @@
    "metadata": {},
    "source": [
     "#### **`BertSelfAttention`-KEY**\n",
-    "实现transformer的 self-attention 操作，也就是 ${\\rm softmax}(\\frac{ {\\rm query} \\cdot {\\rm key}^T}{\\sqrt{d_k}}) \\cdot {\\rm value}$ 这一部分.  \n",
+    "实现transformer的 self-attention 操作，也就是 ${\\rm softmax}(\\frac{ {\\rm Q} \\cdot {\\rm K}^T}{\\sqrt{d_k}}) \\cdot {\\rm V}$ 这一部分.  \n",
     "\n",
-    "这里的self-attention操作，既可以是 encoder 里的 self-attention，也可以是 decoder 里的 self-attention\n",
+    "这里的self-attention操作，分为如下3种：\n",
+    "+ encoder 里的 self-attention\n",
     "+ 如果是 decoder 里的 self-attention，又分为两种情况：\n",
-    "  + decoder的 Masked-self-attention（第一层），此时 q,k,v 都来自于输出序列的同一个\n",
-    "  + decoder的 cross-self-attention（第二层），此时 q,k 来自于 encoder 的输出，v 来自于上一层的 decoder\n",
-    "+ 为了兼容上述3种情况，它的`forward`方法里，可以传入的参数很多，用于控制具体实现哪里的self-attention.\n",
+    "  + decoder的 Masked-self-attention（第一层），此时 Q,K,V 都来自于上一个decoder同位置的输出\n",
+    "  + decoder的 cross-self-attention（第二层），此时 K,V 来自于 encoder 的输出，Q 来自于上一层的 decoder\n",
     "\n",
-    "+ **输出最多为 长度=3 的 tuple**：`(context_layer, attention_probs, past_key_value)`\n",
-    "    + `context_layer` 是 self-attention 最后的计算结果\n",
-    "    + `attention_probs` 是 ${\\rm softmax}(\\frac{ {\\rm query} \\cdot {\\rm key}^T}{\\sqrt{d_k}})$ 的结果，`output_attentions=True` 时输出\n",
-    "    + `past_key_value` 是一个 长度=2 的 tuple：`(key, value)`，存放的是 decoder 中第二层的 cross-self-attention 需要传入的 key,value. `config.is_decoder=True` 时输出.    "
+    "为了兼容上述3种情况，它的`forward`方法里，可以传入的参数很多，用于控制具体实现哪里的self-attention.\n",
+    "\n",
+    "**输出最多为 长度=3 的 tuple**：`(context_layer, attention_probs, past_key_value)`\n",
+    "+ `context_layer` 是 self-attention 最后的计算结果\n",
+    "+ `attention_probs` 是 ${\\rm softmax}(\\frac{ {\\rm Q} \\cdot {\\rm K}^T}{\\sqrt{d_k}})$ 的结果（没有和$V$相乘），当`output_attentions=True` 时输出\n",
+    "+ `past_key_value` 是一个 长度=2 的 tuple：`(key, value)`，存放的是 decoder 中第二层的 cross-self-attention 需要传入的 key,value. 当`config.is_decoder=True` 时输出，这个一般用于加速decoder的计算 "
    ]
   },
   {
@@ -3647,11 +3649,13 @@
     "                f\"heads ({config.num_attention_heads})\"\n",
     "            )\n",
     "\n",
+    "        # heads 数量，每个head的size，所有head_size的总数\n",
     "        self.num_attention_heads = config.num_attention_heads\n",
     "        self.attention_head_size = int(config.hidden_size / config.num_attention_heads)\n",
     "        self.all_head_size = self.num_attention_heads * self.attention_head_size\n",
     "\n",
-    "        # 这里将多个 head 的 Q,K,V 按行并到一个矩阵里了\n",
+    "        # 这里将多个 head 的 Q,K,V 按行并到一个矩阵里了，\n",
+    "        # 本来每个 head 的query/key/value矩阵shape应该是 (hidden_size, attention_head_size)，这里进行了合并\n",
     "        self.query = nn.Linear(config.hidden_size, self.all_head_size)\n",
     "        self.key = nn.Linear(config.hidden_size, self.all_head_size)\n",
     "        self.value = nn.Linear(config.hidden_size, self.all_head_size)\n",
@@ -3668,22 +3672,37 @@
     "        self.is_decoder = config.is_decoder\n",
     "\n",
     "    def transpose_for_scores(self, x: torch.Tensor) -> torch.Tensor:\n",
+    "        # x 的 shape=(batch_size, seq_len, all_hidden_size)\n",
+    "        # 下面变为 (batch_size, seq_len, num_attention_heads, attention_head_size)\n",
     "        new_x_shape = x.size()[:-1] + (self.num_attention_heads, self.attention_head_size)\n",
     "        x = x.view(new_x_shape)\n",
+    "        # shape=(batch_size, num_attention_heads, seq_len, attention_head_size)\n",
+    "        # 变成这样，是因为计算每个head内的Q,K,V时，只需要对后面两个维度进行操作，把 num_attention_heads 提前，是为了同时计算所有head\n",
     "        return x.permute(0, 2, 1, 3)\n",
     "\n",
     "    def forward(\n",
     "        self,\n",
+    "        # 输入，shape=(batch_size, seq_len, hidden_size)\n",
     "        hidden_states: torch.Tensor,\n",
+    "        # 用于对padding位置的词进行mask\n",
     "        attention_mask: Optional[torch.FloatTensor] = None,\n",
     "        head_mask: Optional[torch.FloatTensor] = None,\n",
+    "        # shape=(batch_size, sequence_length, hidden_size)，encoder最后一层的输出序列，作为decoder时，在 cross-attention 层会用到 -------- KEY\n",
     "        encoder_hidden_states: Optional[torch.FloatTensor] = None,\n",
+    "        # 这个mask是用于对padding位置的词进行mask的\n",
     "        encoder_attention_mask: Optional[torch.FloatTensor] = None,\n",
+    "        # 在decoder中才会使用，这是一个 tuple of tuple, 子tuple的数量=config.n_layers，\n",
+    "        # 每个子tuple包含4个tensor，shape=(batch_size, num_heads, sequence_length - 1, embed_size_per_head)\n",
+    "        # 作用是传入上一层encoder已经计算过的部分，用于加速 decoder 的计算\n",
     "        past_key_value: Optional[Tuple[Tuple[torch.FloatTensor]]] = None,\n",
     "        output_attentions: Optional[bool] = False,\n",
     "    ) -> Tuple[torch.Tensor]:\n",
+    "        \n",
+    "        # 这里同时计算得到了所有 head 的 query 值\n",
+    "        # shape = (batch_size, seq_len, hidden_size) * (hideden_size, all_head_size) -> (batch_size, seq_len, all_head_size)\n",
     "        mixed_query_layer = self.query(hidden_states)\n",
     "\n",
+    "        # cross-attention 就是 decoder 中的第二层 attention\n",
     "        # If this is instantiated as a cross-attention module, the keys\n",
     "        # and values come from an encoder; the attention mask needs to be\n",
     "        # such that the encoder's padding tokens are not attended to.\n",
@@ -3695,6 +3714,7 @@
     "            value_layer = past_key_value[1]\n",
     "            attention_mask = encoder_attention_mask\n",
     "        elif is_cross_attention:\n",
+    "            # 对于 cross_attention 层，K,V都是来自encoder最后一层的输出\n",
     "            key_layer = self.transpose_for_scores(self.key(encoder_hidden_states))\n",
     "            value_layer = self.transpose_for_scores(self.value(encoder_hidden_states))\n",
     "            attention_mask = encoder_attention_mask\n",
@@ -3704,9 +3724,11 @@
     "            key_layer = torch.cat([past_key_value[0], key_layer], dim=2)\n",
     "            value_layer = torch.cat([past_key_value[1], value_layer], dim=2)\n",
     "        else:\n",
+    "            # 上面各种情况都不满足，那就是作为 encoder 使用，encoder 中，K,V 也是来自上一层的 hidden_states\n",
     "            key_layer = self.transpose_for_scores(self.key(hidden_states))\n",
     "            value_layer = self.transpose_for_scores(self.value(hidden_states))\n",
     "\n",
+    "        # shape = (batch_size, seq_len, all_head_size) -> (batch_size, num_attention_heads, seq_len, attention_head_size)\n",
     "        query_layer = self.transpose_for_scores(mixed_query_layer)\n",
     "\n",
     "        if self.is_decoder:\n",
@@ -3719,6 +3741,8 @@
     "            # if encoder bi-directional self-attention `past_key_value` is always `None`\n",
     "            past_key_value = (key_layer, value_layer)\n",
     "\n",
+    "        # 计算 Q*K'，shape = (batch_size, num_attention_heads, seq_len, attention_head_size) * (batch_size, num_attention_heads, attention_head_size, seq_len)\n",
+    "        # 最终 shape = (batch_size, num_attention_heads, seq_len, seq_len)\n",
     "        # Take the dot product between \"query\" and \"key\" to get the raw attention scores.\n",
     "        attention_scores = torch.matmul(query_layer, key_layer.transpose(-1, -2))\n",
     "\n",
@@ -3738,6 +3762,7 @@
     "                relative_position_scores_key = torch.einsum(\"bhrd,lrd->bhlr\", key_layer, positional_embedding)\n",
     "                attention_scores = attention_scores + relative_position_scores_query + relative_position_scores_key\n",
     "\n",
+    "        # 上面加了一些位置编码的值，但没有改变shape,\n",
     "        attention_scores = attention_scores / math.sqrt(self.attention_head_size)\n",
     "        if attention_mask is not None:\n",
     "            # Apply the attention mask is (precomputed for all layers in BertModel forward() function)\n",
@@ -3754,9 +3779,12 @@
     "        if head_mask is not None:\n",
     "            attention_probs = attention_probs * head_mask\n",
     "\n",
+    "        # 计算最终的attention, shape = (batch_size, num_attention_heads, seq_len, seq_len) * (batch_size, num_attention_heads, seq_len, attention_head_size)\n",
+    "        # 最终 shape=(batch_size, num_attention_heads, seq_len, attention_head_size)\n",
     "        context_layer = torch.matmul(attention_probs, value_layer)\n",
-    "\n",
+    "        # 变换之后，shape=(batch_size, seq_len, num_attention_heads, attention_head_size)\n",
     "        context_layer = context_layer.permute(0, 2, 1, 3).contiguous()\n",
+    "        # 将所有head的值合并回去 shape = (batch_size, seq_len, num_attention_heads, attention_head_size) -> (batch_size, seq_len, all_head_size)\n",
     "        new_context_layer_shape = context_layer.size()[:-2] + (self.all_head_size,)\n",
     "        context_layer = context_layer.view(new_context_layer_shape)\n",
     "\n",
@@ -3807,7 +3835,8 @@
    "source": [
     "#### `BertAttention`\n",
     "封装了 `BertSelfAttention` + `BertSelfOutput`，形成一个 **Attention** 层\n",
-    "+ 输出：和 `BertSelfAttention` 相同，只是将 `context_layer` 传入`BertSelfOutput`进行了 Add & Norm 处理，其他保持不变   "
+    "+ 输出：和 `BertSelfAttention` 相同，最多为 长度=3 的 tuple：`(context_layer, attention_probs, past_key_value)`   \n",
+    "只是将 `context_layer` 传入`BertSelfOutput`进行了 Add & Norm 处理，其他保持不变   "
    ]
   },
   {
@@ -3836,12 +3865,12 @@
    "metadata": {},
    "source": [
     "#### **`BertLayer`-KEY**\n",
-    "封装了 `BertAttention` + `BertAttention`(可选) +  `BertIntermediate` + `BertOutput`，构成 encoder 或者 decoder 里的一层.    \n",
+    "封装了 `BertAttention` + `BertAttention`(可选，作为decoder中的cross-attention) +  `BertIntermediate` + `BertOutput`，构成 encoder 或者 decoder 里的一层.    \n",
     "它提供了如下两个参数：\n",
     "+ `config.is_decoder`：为 True 时，作为 decoder 使用，输出 decoder 的结果，否则作为 encoder 使用，输出 encoder 的隐藏层状态\n",
     "+ `config.add_cross_attention`：为 True 时，会再添加一个 `BertAttention` 层，也就是 decoder 内部中间的 self-attention 层，称为 **cross-attention**   \n",
     "\n",
-    "**输出：长度=4 的tuple**: `(context_layer, attention_probs, cross_attention_probs, past_key_value)`\n",
+    "**输出：长度=4 的tuple** `(context_layer, attention_probs, cross_attention_probs, past_key_value)`\n",
     "+ `context_layer` 是 输出的状态向量，它可能经过了两个 `BertAttention` 层\n",
     "+ `attention_probs` 是第一个 `BertAttentnion` 层的输出\n",
     "+ `cross_attention_probs` 是第二个 `BertAttentnion`(cross-attention) 层的输出\n",
@@ -3853,7 +3882,7 @@
    "id": "ba352c6e-afa1-441b-b259-c8a5ae27d46d",
    "metadata": {},
    "source": [
-    "源码如下：\n",
+    "源码（4.32.1版本）如下：\n",
     "```python\n",
     "class BertLayer(nn.Module):\n",
     "    def __init__(self, config):\n",
@@ -3882,6 +3911,8 @@
     "    ) -> Tuple[torch.Tensor]:\n",
     "        # decoder uni-directional self-attention cached key/values tuple is at positions 1,2\n",
     "        self_attn_past_key_value = past_key_value[:2] if past_key_value is not None else None\n",
+    "        \n",
+    "        # BertAttention的输出: (context_layer, attention_probs, past_key_value)\n",
     "        self_attention_outputs = self.attention(\n",
     "            hidden_states,\n",
     "            attention_mask,\n",
@@ -4028,27 +4059,27 @@
     "3. `self.pooler = BertPooler(config) if add_pooling_layer else None`\n",
     "\n",
     "\n",
-    "+ 初始化的一些重要参数：\n",
-    "  + `is_decoder`\n",
-    "  + `add_cross_attention`\n",
-    "  + `add_pooling_layer`，是否添加最后的 `BertPooler` 层，默认为True\n",
-    "  \n",
-    "  上述参数中，除了`add_pooling_layer`，其他参数都是封装在 `BertConfig` 类中的。\n",
+    "初始化的一些重要参数：\n",
+    "+ `is_decoder`\n",
+    "+ `add_cross_attention`\n",
+    "+ `add_pooling_layer`，是否添加最后的 `BertPooler` 层，默认为True\n",
+    "\n",
+    "上述参数中，除了`add_pooling_layer`，其他参数都是封装在 `BertConfig` 类中的。\n",
     "\n",
     "\n",
-    "+ 前向传播方法：  \n",
+    "前向传播方法：  \n",
     "`forward(input_ids=None, attention_mask=None, token_type_ids=None, position_ids=None, head_mask=None, inputs_embeds=None, encoder_hidden_states=None, encoder_attention_mask=None, past_key_values=None, use_cache=None, output_attentions=None, output_hidden_states=None, return_dict=None)`\n",
-    "  + `input_ids`：`shape=(batch_size, sequence_length)`，每个sequence是一个 list of int，其中每个值是该word在词典中的indice，经过embedding层之后，每个word的indice会被转换成word embedding的词向量。\n",
-    "  + `attention_mask`，用于表示该位置的词语是否需要be attended，主要是处理padding的词语，这些padding的词语不需要参与计算。\n",
-    "  + `token_type_ids`，用于区分成对句子中两个句子，为 {0, 1} 掩码\n",
-    "  + `position_ids`，位置编码，可选\n",
-    "  + `head_mask`，\n",
-    "  + `inputs_embeds`，输入的embedding向量，`shape=(batch_size, sequence_length, hidden_size)`，如果不想传入`input_ids`经过内部的`BertEmbedding`转成向量，就可以在这里传入自定义的embedding表示向量，注意，这个**不能和 `input_ids` 同时使用**.\n",
-    "  + `encoder_hidden_states`，作为decoder里的cross-attention使用时，需要的encoder输出就从这个参数传入\n",
-    "  + `encoder_attention_mask`，\n",
-    "  + `past_key_values`，包含了前一个attention block了计算的 key 和 value —— 这个参数的使用有点迷惑。\n",
-    "  + `output_attentions`，是否输出所有attention layer 的结果，默认 False\n",
-    "  + `output_hidden_states`，是否输出所有attention layer的隐藏层状态，默认 False\n",
+    "+ `input_ids`：`shape=(batch_size, sequence_length)`，每个sequence是一个 list of int，其中每个值是该word在词典中的indice，经过embedding层之后，每个word的indice会被转换成word embedding的词向量。\n",
+    "+ `attention_mask`，用于表示该位置的词语是否需要be attended，主要是处理padding的词语，这些padding的词语不需要参与计算。\n",
+    "+ `token_type_ids`，用于区分成对句子中两个句子，为 {0, 1} 掩码\n",
+    "+ `position_ids`，位置编码，可选\n",
+    "+ `head_mask`，\n",
+    "+ `inputs_embeds`，输入的embedding向量，`shape=(batch_size, sequence_length, hidden_size)`，如果不想传入`input_ids`经过内部的`BertEmbedding`转成向量，就可以在这里传入自定义的embedding表示向量，注意，这个**不能和 `input_ids` 同时使用**.\n",
+    "+ `encoder_hidden_states`，作为decoder里的cross-attention使用时，需要的encoder输出就从这个参数传入\n",
+    "+ `encoder_attention_mask`，\n",
+    "+ `past_key_values`，包含了前一个attention block了计算的 key 和 value —— 这个参数的使用有点迷惑。\n",
+    "+ `output_attentions`，是否输出所有attention layer 的结果，默认 False\n",
+    "+ `output_hidden_states`，是否输出所有attention layer的隐藏层状态，默认 False\n",
     "\n",
     "\n",
     "`forward()`方法的返回值是如下的对象（在`return_dict=True`时）：\n",
@@ -4593,7 +4624,13 @@
    "cell_type": "code",
    "execution_count": 33,
    "id": "latter-laptop",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -6250,7 +6287,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Deep-Learning-Env",
+   "display_name": "Deep-Learning",
    "language": "python",
    "name": "deep-learning"
   },
@@ -6264,7 +6301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.8.13"
   },
   "toc-autonumbering": true,
   "toc-showcode": false,
