HF-transfomers: DataCollator+Trainer复习

--- a/DeepLearning-Actions/07-huggingface-tools.ipynb
+++ b/DeepLearning-Actions/07-huggingface-tools.ipynb
@@ -148,7 +148,9 @@
   {
    "cell_type": "markdown",
    "id": "84e8717d-bf83-4491-890d-914499a0c4f6",
-   "metadata": {},
+   "metadata": {
+    "toc-hr-collapsed": true
+   },
    "source": [
     "## 数据集加载\n",
     "\n",
@@ -1317,7 +1319,7 @@
    "cell_type": "markdown",
    "id": "1ec45a95-c7e5-443a-9eff-df411063161e",
    "metadata": {
-    "toc-hr-collapsed": true
+    "tags": []
    },
    "source": [
     "## 数据集处理\n",
@@ -4936,7 +4938,8 @@
    "cell_type": "markdown",
    "id": "2bd55dbb-6da6-4ec6-88b2-cfb035b8d896",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "toc-hr-collapsed": true
    },
    "source": [
     "----\n",
@@ -4956,15 +4959,31 @@
   },
   {
    "cell_type": "markdown",
+   "id": "faa5f9db-a395-402c-ad80-0dac0e02f117",
+   "metadata": {},
+   "source": [
+    "源码（4.23.1）里，Datacollator的类型注释签名为：\n",
+    "```python\n",
+    "from typing import Any, Callable, Dict, List, NewType\n",
+    "InputDataClass = NewType(\"InputDataClass\", Any)\n",
+    "DataCollator = NewType(\"DataCollator\", Callable[[List[InputDataClass]], Dict[str, Any]])\n",
+    "```\n",
+    "这个类型注释写的不是很好，不过大致可以看出，它是一个可调用对象，接受的参数是`List[Any]`，返回一个`Dict[str, Any]`：key是特征名称，value是该特征的值序列。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "104331fc-f424-4885-8402-00728a70e949",
    "metadata": {
     "tags": []
    },
    "source": [
     "### DefaultDataCollator\n",
-    "默认的collator，**它会检测 dataset 中是否有 `labels` 或者 `label_ids` 这两个特征，有的话，会单独处理**。\n",
     "\n",
-    "DataCollator的输入是 list of dict-like 的内容，输出是一个 dict-like，每个 key 是一个特征，value 是 list，对应于该特征下的 batch。"
+    "+ 默认的collator，它是最简单的collator，内部只是简单的提取每个特征的样本值形成一个序列，不会做padding等处理。   \n",
+    "不过**它会检测 dataset 中是否有 `labels` 或者 `label_ids` 这两个特征，有的话，会单独提前这两个特征的值**。\n",
+    "+ DataCollator的输入是 list of dict-like 的内容，输出是一个 dict-like，每个 key 是一个特征，value 是 list，对应于该特征下的 batch。\n",
+    "+ 内部其实就是之间调用`default_data_collator(features: List[InputDataClass], return_tensors=\"pt\") -> Dict[str, Any]`这个函数。"
    ]
   },
   {
@@ -5571,6 +5590,38 @@
     "+ `TrainingArguments` + `Trainer`，用于普通模型的训练\n",
     "+ `Seq2SeqTrainingArguments` + `Seq2SeqTrainer`：用于序列模型的训练，这两个类分别继承了上面的类，`Seq2SeqTrainingArguments`扩充了几个属性，`Seq2SeqTrainer` 重写了几个父类方法\n",
     "\n",
+    "\n",
+    "`Trainer`初始化方法如下：\n",
+    "```python\n",
+    "class Trainer:\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        model: Union[PreTrainedModel, nn.Module] = None,\n",
+    "        args: TrainingArguments = None,\n",
+    "        data_collator: Optional[DataCollator] = None,\n",
+    "        train_dataset: Optional[Dataset] = None,\n",
+    "        eval_dataset: Optional[Dataset] = None,\n",
+    "        tokenizer: Optional[PreTrainedTokenizerBase] = None,\n",
+    "        model_init: Callable[[], PreTrainedModel] = None,\n",
+    "        compute_metrics: Optional[Callable[[EvalPrediction], Dict]] = None,\n",
+    "        callbacks: Optional[List[TrainerCallback]] = None,\n",
+    "        optimizers: Tuple[torch.optim.Optimizer, torch.optim.lr_scheduler.LambdaLR] = (None, None),\n",
+    "        preprocess_logits_for_metrics: Callable[[torch.Tensor, torch.Tensor], torch.Tensor] = None,\n",
+    "    ):\n",
+    "        ...\n",
+    "```\n",
+    "+ model: 待训练的模型\n",
+    "+ args: 训练参数，`TrainingArguments`对象\n",
+    "+ data_collator:\n",
+    "+ train_dataset\n",
+    "+ eval_dataset\n",
+    "+ tokenizer\n",
+    "+ model_init\n",
+    "+ compute_metrics\n",
+    "+ callbacks\n",
+    "+ opitimizers\n",
+    "\n",
+    "\n",
     "如果要自定义一些训练流程，可以继承`Trainer`类，然后重写其中的如下方法：\n",
     "+ `training_step()`\n",
     "+ `compute_loss()`\n",
@@ -5636,9 +5687,9 @@
    "id": "6ca7a242-dd7e-4a28-a39b-95573d32300e",
    "metadata": {},
    "source": [
-    "### Trainer源码分析\n",
+    "### Trainer训练源码分析\n",
     "\n",
-    "这里主要看了一下`Trainer.train()`方法里的逻辑：\n",
+    "这里主要看了一下`Trainer.train()`方法里的逻辑（4.23.1版本）：\n",
     "1. `train()`方法里主要是做一些模型初始化，加载checkpoint，封装模型的操作，之后会调用 `inner_training_loop()` 方法，在该方法里完成训练\n",
     "\n",
     "2. `inner_training_loop()` 方法里的训练过程，会在对应步骤调用如下的 callback 方法，并且根据返回的 `TrainerControl` 对象判断接下来的操作\n",
@@ -5985,6 +6036,131 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9afab1a9-ec5e-4032-bae9-90cf433e588c",
+   "metadata": {},
+   "source": [
+    "### 命令行解析\n",
+    "\n",
+    "[HfArgumentParser](https://huggingface.co/docs/transformers/internal/trainer_utils#transformers.HfArgumentParser): API文档\n",
+    "\n",
+    "`transformer`包还提供了一个`HfArgumentParser` 类，它继承自`argparse.ArgumentParser`，主要是用于将命令行参数解析成 `dataclass` 定义的容器类，**可以和`TrainingArguments`配合使用**。\n",
+    "\n",
+    "一个简单的使用示例如下："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "10cb90f4-9281-46cf-a6cb-130b0847a828",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dataclasses import dataclass\n",
+    "from transformers import HfArgumentParser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7c29b635-ee7e-4227-bc06-fc304d5e0b3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 定义多个 dataclass 的类，用于存放属性\n",
+    "@dataclass\n",
+    "class A:\n",
+    "    a: str\n",
+    "    param_a: str\n",
+    "\n",
+    "@dataclass\n",
+    "class B:\n",
+    "    b: str\n",
+    "    param_b: str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2b06f7ee-9124-44cd-bad2-f15be6829942",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 使用上述的dataclass类初始化解析器实例\n",
+    "parser = HfArgumentParser([A, B])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef218a4b-0ea5-4660-9445-98c318db335b",
+   "metadata": {},
+   "source": [
+    "+ 解析命令行字符串"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "33db1236-2669-4295-8533-6a53e2f5ea39",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A(a='a1', param_a='a2')\n",
+      "B(b='b1', param_b='b2')\n",
+      "<class '__main__.A'>\n",
+      "<class '__main__.B'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "args = \"--a a1 --param_a a2 --b b1 --param_b b2\".split(' ')\n",
+    "a_args, b_args = parser.parse_args_into_dataclasses(args=args)\n",
+    "\n",
+    "print(a_args)\n",
+    "print(b_args)\n",
+    "print(type(a_args))\n",
+    "print(type(b_args))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2d5a6f1-62e2-4bae-9d74-d5ce1df40036",
+   "metadata": {},
+   "source": [
+    "+ 解析字典"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "55c1c9cb-a010-4da4-a91f-d5d55b235f9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A(a='a1', param_a='a2')\n",
+      "B(b='b1', param_b='b2')\n",
+      "<class '__main__.A'>\n",
+      "<class '__main__.B'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "args_dict = {'a': 'a1', 'param_a': 'a2', 'b': 'b1', 'param_b': 'b2'}\n",
+    "a_args, b_args = parser.parse_dict(args=args_dict)\n",
+    "\n",
+    "print(a_args)\n",
+    "print(b_args)\n",
+    "print(type(a_args))\n",
+    "print(type(b_args))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "52747763-4490-4d5d-9fb2-8577c6b4ef9f",
    "metadata": {},
    "source": [
@@ -6000,9 +6176,10 @@
    "id": "1dd005b0-92fd-43a3-a72c-7755b10b79b2",
    "metadata": {},
    "source": [
-    "## 结果评估\n",
+    "---\n",
+    "# 结果评估\n",
     "\n",
-    "HF官方提供了一个`evaluate`的包，封装了常用一些评估指标，方便使用。\n",
+    "HF官方提供了一个`evaluate`的包，封装了常用一些评估指标，方便使用，官方文档[Evaluate](https://huggingface.co/docs/evaluate/index)。\n",
     "\n",
     "一共有3类指标：\n",
     "+ metric：也就是常用的模型评估指标，所有的metric指标见 [Evaluate Metric](https://huggingface.co/evaluate-metric)\n",
@@ -6176,104 +6353,6 @@
     "# PEFT-TODO\n",
     "\n",
     "PEFT (Parameter-Efficient Fine-Tuning) 是HF公司专门为LLM进行微调的包。"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9e356ac3-0973-48fd-8889-bc63dda4138f",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "\n",
-    "# 其他工具\n",
-    "\n",
-    "huggingface-transformer还提供了其他的一些工具"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "792f18df-0f9e-4aee-9ea6-2fe5f2301f8f",
-   "metadata": {},
-   "source": [
-    "## 命令行解析\n",
-    "\n",
-    "主要是`HfArgumentParser` 这个类，它继承与`argparse.ArgumentParser`，主要是用于将参数解析成 `dataclass` 定义的容器类里，常用的使用方式如下："
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "7c29b635-ee7e-4227-bc06-fc304d5e0b3f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from dataclasses import dataclass\n",
-    "\n",
-    "# 定义多个 dataclass 的类\n",
-    "@dataclass\n",
-    "class A:\n",
-    "    a: str\n",
-    "    param_a: str\n",
-    "\n",
-    "@dataclass\n",
-    "class B:\n",
-    "    b: str\n",
-    "    param_b: str"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "33db1236-2669-4295-8533-6a53e2f5ea39",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from transformers import HfArgumentParser\n",
-    "\n",
-    "parser = HfArgumentParser([A, B])\n",
-    "args = \"--a a1 --param_a a2 --b b1 --param_b b2\".split(' ')\n",
-    "a_args, b_args = parser.parse_args_into_dataclasses(args=args)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "55c1c9cb-a010-4da4-a91f-d5d55b235f9f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A(a='a1', param_a='a2')\n",
-      "B(b='b1', param_b='b2')\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(a_args)\n",
-    "print(b_args)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "452ee6ba-acbc-4759-b9a5-a2d98000a299",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "__main__.A"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(a_args)"
    ]
   },
   {
