--- a/DataMining-Actions/03-ensemble-models.ipynb
+++ b/DataMining-Actions/03-ensemble-models.ipynb
@@ -10,12 +10,12 @@
      "output_type": "stream",
      "text": [
       "package版本信息：\n",
-      "numpy:       1.18.1\n",
-      "pandas:      1.0.1\n",
-      "matplotlib:  3.1.3\n",
-      "sklearn:     0.22.1\n",
-      "seaborn:     0.10.0\n",
-      "plotly:      4.14.1\n"
+      "numpy:       1.23.3\n",
+      "pandas:      1.4.4\n",
+      "matplotlib:  3.5.3\n",
+      "sklearn:     1.1.2\n",
+      "seaborn:     0.12.1\n",
+      "plotly:      5.13.1\n"
      ]
     }
    ],
@@ -44,45 +44,270 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# Bagging"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+    "# 介绍\n",
+    "\n",
+    "整理 `sklearn.ensemble` 模块里提供的集成学习模型，该模块里主要分为如下几类集成模型：\n",
+    "+ Bagging\n",
+    "+ Boosting\n",
+    "+ 结合策略\n",
+    "+ 其他"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## RandomForest"
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "---\n",
+    "# Bagging\n",
+    "\n",
+    "提供了并行集成相关的模型。"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "# Boosting"
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "## Random Forests"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Stacking\n",
+    "## Extremely Randomized Trees"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "---\n",
+    "# Boosting\n",
+    "\n",
+    "提供了串行集成相关的模型。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## GBDT - KEY\n",
+    "\n",
+    "sklearn提供了两个版本的GBDT实现，普通版本和快速版本。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 普通版本\n",
+    "```python\n",
+    "# 回归树 API\n",
+    "GradientBoostingRegressor(*, \n",
+    "    loss='squared_error',\n",
+    "    learning_rate=0.1, n_estimators=100, subsample=1.0, criterion='friedman_mse', \n",
+    "    min_samples_split=2, min_samples_leaf=1, min_weight_fraction_leaf=0.0, max_depth=3, min_impurity_decrease=0.0,\n",
+    "    init=None, random_state=None, max_features=None, \n",
+    "    alpha=0.9,   # 回归树独有\n",
+    "    verbose=0, max_leaf_nodes=None, warm_start=False, validation_fraction=0.1,\n",
+    "    n_iter_no_change=None, tol=0.0001, ccp_alpha=0.0\n",
+    ")\n",
+    "\n",
+    "# 分类树 API\n",
+    "GradientBoostingClassifier(*,\n",
+    "    loss='log_loss',\n",
+    "    learning_rate=0.1, n_estimators=100, subsample=1.0, criterion='friedman_mse', \n",
+    "    min_samples_split=2, min_samples_leaf=1, min_weight_fraction_leaf=0.0, max_depth=3, min_impurity_decrease=0.0,\n",
+    "    init=None, random_state=None, max_features=None, \n",
+    "    verbose=0, max_leaf_nodes=None, warm_start=False, validation_fraction=0.1, \n",
+    "    n_iter_no_change=None, tol=0.0001, ccp_alpha=0.0\n",
+    ")\n",
+    "```\n",
+    "\n",
+    "对比可以看出，两者的参数里，除了 `loss` 不一样，几乎都一致，除了回归树多了一个`alpha`参数，因此下面就一起介绍了。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 参数\n",
+    "\n",
+    "GBDT普通版本的参数可以分为如下 4 类：\n",
+    "\n",
+    "+ 训练过程\n",
+    "\n",
+    "| 参数                                   | 含义                     | 影响力 | 说明                                    |\n",
+    "| -------------------------------------- | ------------------------ | ------ | --------------------------------------- |\n",
+    "| loss                                   | 损失函数                 | ⭐⭐⭐    | 可选值见下面说明                        |\n",
+    "| <font color=\"red\">n_estimators</font>  | 基函数个数               | ⭐⭐⭐⭐⭐  | int，默认100                            |\n",
+    "| <font color=\"red\">learning_rate</font> | 学习率                   | ⭐⭐⭐⭐⭐  | float，默认0.1                          |\n",
+    "| <font color=\"red\">max_features</font>  | 基函数训练时使用的特征数 | ⭐⭐⭐⭐⭐  | 默认None表示使用全部。有多种方式配置。  |\n",
+    "| subsample                              | 基函数训练时的采样比例   | ⭐⭐⭐    | float，必须在 $(0.0,1.0])$之间，默认1.0 |\n",
+    "| init                                   | 初始值设置               | ⭐⭐      | 默认None                                |\n",
+    "| random_state                           | 随机数状态               | ⭐      | 默认None                                |\n",
+    "| alpha                                  |                          | ⭐      |                                         |\n",
+    "\n",
+    "\n",
+    "+ 基函数参数\n",
+    "\n",
+    "| 参数                     | 含义                           | 影响力 | 说明                                            |\n",
+    "| ------------------------ | ------------------------------ | ------ | ----------------------------------------------- |\n",
+    "| criterion                | CART分裂时的准则               | ⭐⭐     | 可选值为`friedman_mse`（默认），`squared_error` |\n",
+    "| min_samples_split        | 节点分裂时需要包含的最小样本数 | ⭐⭐     | int表示个数（默认2），float表示比例             |\n",
+    "| min_samples_leaf         | 叶子节点的最小样本数           | ⭐⭐     | int表示个数，float表示比例                      |\n",
+    "| max_depth                | 树的最大深度                   | ⭐⭐     | int，默认3                                      |\n",
+    "| min_impurity_decrease    | 节点分裂时的最小不纯度增益     | ⭐⭐     | float，默认0.                                   |\n",
+    "| max_leaf_nodes           | 叶子结点的最大个数             | ⭐⭐     | int，默认None，表示无限制                       |\n",
+    "| min_weight_fraction_leaf |                                |        |                                                 |\n",
+    "\n",
+    "\n",
+    "+ 提前停止\n",
+    "\n",
+    "| 参数                | 含义                                                   | 说明                              |\n",
+    "| ------------------- | ------------------------------------------------------ | --------------------------------- |\n",
+    "| validation_fraction | 用于计算提前停止的验证集比例                           | float，默认0.1                    |\n",
+    "| n_iter_no_change    | 提前停止的轮数，表示多少轮验证集无变化之后，就提前停止 | int，默认None，表示不启用提前停止 |\n",
+    "| tol                 | 提前停止判断的loss变化值                               | float，默认1e-4                   |\n",
+    "\n",
+    "+ 其他\n",
+    "\n",
+    "| 参数       | 含义 | 说明 |\n",
+    "| ---------- | ---- | ---- |\n",
+    "| verbose    |      |      |\n",
+    "| ccp_alpha  |      |      |\n",
+    "| warm_start |      |      |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 属性和方法"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 快速版本\n",
+    "```python\n",
+    "# 回归树 API\n",
+    "HistGradientBoostingRegressor(\n",
+    "    loss='squared_error', \n",
+    "    *, quantile=None, \n",
+    "    learning_rate=0.1, max_iter=100, max_leaf_nodes=31, max_depth=None, \n",
+    "    min_samples_leaf=20, l2_regularization=0.0, max_features=1.0, max_bins=255,\n",
+    "    categorical_features='warn', monotonic_cst=None, interaction_cst=None, warm_start=False, \n",
+    "    early_stopping='auto', scoring='loss', validation_fraction=0.1, \n",
+    "    n_iter_no_change=10, tol=1e-07, verbose=0, random_state=None\n",
+    ")\n",
+    "\n",
+    "# 分类树 API\n",
+    "HistGradientBoostingClassifier(\n",
+    "    loss='log_loss', \n",
+    "    *, \n",
+    "    learning_rate=0.1, max_iter=100, max_leaf_nodes=31, max_depth=None, \n",
+    "    min_samples_leaf=20, l2_regularization=0.0, max_features=1.0, max_bins=255, \n",
+    "    categorical_features='warn', monotonic_cst=None, interaction_cst=None, warm_start=False, \n",
+    "    early_stopping='auto', scoring='loss', validation_fraction=0.1, \n",
+    "    n_iter_no_change=10, tol=1e-07, verbose=0, random_state=None, \n",
+    "    class_weight=None  # 分类树独有\n",
+    ")\n",
+    "```\n",
+    "\n",
+    "对比可以看出，快速版本的回归和分类API参数差异也不大。\n",
+    "\n",
+    "但是快速版本相比普通版本，提供了一些其他的支持。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 参数\n",
+    "\n",
+    "快速版本特有的参数如下：\n",
+    "\n",
+    "| 参数                 | 含义                                   | 影响力 | 说明         |\n",
+    "| -------------------- | -------------------------------------- | ------ | ------------ |\n",
+    "| max_iter             | 最大迭代次数，相当于`n_estimators`参数 |        | int，默认100 |\n",
+    "| l2_regularization    | L2正则项                               |        |              |\n",
+    "| max_bins             | 最大分箱数                             |        |              |\n",
+    "| categorical_features | 处理分类特征                           |        |              |\n",
+    "| monotonic_cst        |                                        |        |              |\n",
+    "| interaction_cst      |                                        |        |              |\n",
+    "| early_stopping       | 提前停止策略                           |        |              |\n",
+    "| scoring              | 提前停止的评价指标                     |        |              |\n",
+    "| quantile             | `loss='quantile'`时使用                |        |              |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 属性和方法"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 损失函数"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 使用"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## AdaBoost"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# 结合策略"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## Stacking - KEY\n",
     "\n",
     "有关Stacking的介绍，可以参考如下的几篇博客：\n",
     "1. [模型融合方法概述](https://zhuanlan.zhihu.com/p/25836678)\n",
@@ -672,10 +897,10 @@
      "evalue": "name 'RandomForestClassifier' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "\u001B[1;32m<ipython-input-23-7b82aa248597>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[1;31m# Create 5 objects that represent our 4 models\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 2\u001B[1;33m \u001B[0mrf\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mSklearnHelper\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mclf\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0mRandomForestClassifier\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mseed\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0mSEED\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mparams\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0mrf_params\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      3\u001B[0m \u001B[0met\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mSklearnHelper\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mclf\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0mExtraTreesClassifier\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mseed\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0mSEED\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mparams\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0met_params\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      4\u001B[0m \u001B[0mada\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mSklearnHelper\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mclf\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0mAdaBoostClassifier\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mseed\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0mSEED\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mparams\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0mada_params\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      5\u001B[0m \u001B[0mgb\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mSklearnHelper\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mclf\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0mGradientBoostingClassifier\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mseed\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0mSEED\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mparams\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0mgb_params\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;31mNameError\u001B[0m: name 'RandomForestClassifier' is not defined"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-23-7b82aa248597>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Create 5 objects that represent our 4 models\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mrf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mSklearnHelper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mclf\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mRandomForestClassifier\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mseed\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mSEED\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mrf_params\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0met\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mSklearnHelper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mclf\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mExtraTreesClassifier\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mseed\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mSEED\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0met_params\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mada\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mSklearnHelper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mclf\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mAdaBoostClassifier\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mseed\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mSEED\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mada_params\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mgb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mSklearnHelper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mclf\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mGradientBoostingClassifier\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mseed\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mSEED\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mgb_params\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'RandomForestClassifier' is not defined"
      ]
     }
    ],
@@ -726,10 +951,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "gbm = xgb.XGBClassifier(\n",
     "    #learning_rate = 0.02,\n",
@@ -745,13 +968,36 @@
     " scale_pos_weight=1).fit(x_train, y_train)\n",
     "predictions = gbm.predict(x_test)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Voting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----\n",
+    "# 其他"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## IsolationForest"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Data-Analysis",
    "language": "python",
-   "name": "python3"
+   "name": "data-analysis"
   },
   "language_info": {
    "codemirror_mode": {
@@ -763,7 +1009,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
